fixed element sizes and added go back functionality for booking menu on mobile devices

--- a/src/Components/AboutUs/AboutUs.css
+++ b/src/Components/AboutUs/AboutUs.css
@@ -54,8 +54,12 @@
 }
 
 @media (max-width: 700px) {
+	.about-us_wrapper {
+		padding-top: 36px;
+	}
 	.about-us_title {
 		font-size: 28px;
+		margin-bottom: 22px;
 	}
 	.about-us_body p,
 	.indent {
