--- a/src/Components/Buttons/CommonButton.css
+++ b/src/Components/Buttons/CommonButton.css
@@ -117,6 +117,6 @@
 @media (max-width: 700px) {
 	.btn--services-prices {
 		min-width: 133px;
-		margin-bottom: 40px;
+		margin-bottom: 30px;
 	}
 }
