--- a/src/Components/Buttons/UpArrow.css
+++ b/src/Components/Buttons/UpArrow.css
@@ -16,7 +16,7 @@
 	}
 }
 
-@media (max-width: 600px) {
+@media (max-width: 700px) {
 	.map-and-footer--logo_arrow {
 		display: none;
 	}
