--- a/src/Components/Contacts/Contacts.css
+++ b/src/Components/Contacts/Contacts.css
@@ -87,3 +87,8 @@
 		padding: 0;
 	}
 }
+@media (max-width: 700px) {
+	.contacts-warp {
+		padding-top: 30px;
+	}
+}
