--- a/src/Components/PriceList/PriceList.css
+++ b/src/Components/PriceList/PriceList.css
@@ -101,7 +101,7 @@
 @media (max-width: 700px) {
 	.price-list_title {
 		font-size: 28px;
-		margin: 40px 0 20px;
+		margin: 25px 0 10px;
 	}
 	.price-list_table {
 		margin-bottom: 30px;
