--- a/src/Components/Team/Team.css
+++ b/src/Components/Team/Team.css
@@ -112,7 +112,7 @@
 		padding-top: 25px;
 	}
 	.team-title {
-		margin-bottom: 30px;
+		margin-bottom: 20px;
 	}
 }
 
